<resources>
    <string name="app_name">坚果</string>
    <string name="todo">打卡</string>
    <string name="hole">树洞</string>
    <string name="community">社区</string>
    <string name="calendar">日历</string>
    <string name="favorite">喜爱</string>
    <string name="add">添加</string>
    <string name="mine">我的</string>
    <string name="nut">坚果</string>
    <string name="draw_emotion_line"><u>生成心情曲线</u></string>
    <string name="status_ps">PS:点击确认后我们将为您自动切换主题色，如不需要，可以在“我的”中选择“界面设置关闭”</string>
    <string name="confirm">确     认</string>
    <string name="search">搜索</string>
    <string name="setting">设置</string>
    <string name="app_name_chinese">坚果</string>
    <string name="login_account_hint">手机号/邮箱</string>
    <string name="login_psw_hint">输入密码</string>
    <string name="login_auth_hint">验证码</string>
    <string name="login_check_hint">确认密码</string>
    <string name="account"><u>已有账号</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>