<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logup_icon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorTheme"
        app:layout_constraintBottom_toTopOf="@id/logup_account"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/logup_app_name" />


    <TextView
        android:id="@+id/logup_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/app_name_chinese"
        android:textColor="@android:color/black"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/logup_account"
        app:layout_constraintLeft_toRightOf="@id/logup_icon"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/logup_account"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_edit_height"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="150dp"
        android:background="@drawable/bg_login_edit"
        android:gravity="center"
        android:hint="@string/login_account_hint"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/logup_auth_code"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_edit_height"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_login_edit"
        android:gravity="center"
        android:hint="@string/login_auth_hint"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logup_account" />


    <EditText
        android:id="@+id/logup_psw"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_edit_height"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_login_edit"
        android:gravity="center"
        android:hint="@string/login_psw_hint"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logup_auth_code" />


    <EditText
        android:id="@+id/logup_check"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_edit_height"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_login_edit"
        android:gravity="center"
        android:hint="@string/login_check_hint"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logup_psw" />

    <Button
        android:id="@+id/logup_button"
        android:layout_width="200dp"
        android:layout_height="@dimen/login_edit_height"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_forget_bt"
        android:text="注册"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logup_check" />

    <TextView
        android:id="@+id/logup_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/account"
        android:textColor="@color/colorTheme"
        android:textSize="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logup_button" />
</androidx.constraintlayout.widget.ConstraintLayout>