<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/login_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/app_name_chinese"
        android:textColor="@android:color/black"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/login_account"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/login_account"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_edit_height"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="200dp"
        android:background="@drawable/bg_login_edit"
        android:gravity="center"
        android:hint="@string/login_account_hint"
        app:layout_constraintBottom_toTopOf="@id/login_psw"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_psw"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_edit_height"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_login_edit"
        android:gravity="center"
        android:hint="@string/login_psw_hint"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_account" />

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/ic_login_button"
        app:layout_constraintBottom_toTopOf="@id/login_deliver"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_psw"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/login_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="忘记密码"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/login_deliver" />

    <View
        android:id="@+id/login_deliver"
        android:layout_width="2dp"
        android:layout_height="0dp"
        android:background="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@id/login_forget"
        app:layout_constraintLeft_toRightOf="@id/login_forget"
        app:layout_constraintRight_toLeftOf="@id/login_logup"
        app:layout_constraintTop_toTopOf="@id/login_forget" />

    <TextView
        android:id="@+id/login_logup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="用户注册"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@id/login_forget"
        app:layout_constraintLeft_toRightOf="@id/login_deliver"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/login_forget" />
</androidx.constraintlayout.widget.ConstraintLayout>